2002-08-20  Alexander Malmberg <alexander@malmberg.org>

	* Headers/art/, Source/art/: Add back-art, a backend based on
	libart and freetype.

2002-08-15  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Add NetBSD header/ldflag support (Patch from
	Peter Cooper). Cleanup freebsd support.

2002-08-06  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:]): Add special gotShmCompletion
	call for libart backend.

2002-08-02  Adam Fedor  <fedor@gnu.org>

	* Merge from 0.8.0 into main branch.

2002-08-01  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.0
	
	* configure.ac: Check for usleep.
	* Source/x11/XGServerWindow.m ([XGServer -windowdevice:]):
	Use alternate if no usleep.

2002-07-28  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/XGBitmap.m (_pixmap_combine_alpha): Use
	interger arithmatic. (Patch from Jeff Teunissen)

2002-07-19  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/XGGeometry.m (clipXRectsForCopying): Shift rect
	origin to account for clipping.
	* Source/xlib/XGGState.m (-setAlphaColor:): Correct colorspace
	of alpha color.

2002-07-17  Adam Fedor  <fedor@gnu.org>

	* Version: 0.7.9

2002-07-14  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XIMInputServer.m (-ximCreateIC:): Don't set
	FocusWindow attrib. Causes a segfault at XCloseDisplay..

2002-07-13  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/XGBitmap.m (_pixmap_combine_alpha): Fix and
	cleanup alpha blending (Rescale by alpha)
	(_bitmap_combine_alpha): Idem. (Patch from Jeff Teunissen).

2002-06-28  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/XGFont.m ([XGFontInfo -xCharStructForGlyph:glyph]):
	Fix variable typo - using wrong index to glyph (patch from 
	stoyan@hologr.com).

2002-06-24  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer -windowdevice:]): Use
	usleep instead of loop to wait for resize (rewritten
	patch from georg@vhf.de).

Sat Jun 22 14:28:28 2002  Nicola Pero  <n.pero@mi.flashnet.it>
