@@ -1,3 +1,9 @@
+2002-08-21  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/ARTContext.m: ([WinImage -_exposeRect:]) Guard against
+	invalid coordinates to (hopefully) fix the problem with windows
+	turning all white and BadValue warnings appearing.
+
 2002-08-20  Alexander Malmberg <alexander@malmberg.org>
 
 	* Headers/art/, Source/art/: Add back-art, a backend based on
